force-app/main/default/objects/AnswerOption__c/AnswerOption__c.object-meta.xml
<CustomObject>
    <label>Answer Option</label>
    <nameField>
        <displayFormat>AO-{00000000}</displayFormat>
        <label>Answer Option Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Answer Options</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>