force-app/main/default/objects/AnswerOption__c/fields/AnswerOptionText__c.field-meta.xml
<CustomField>
    <fullName>AnswerOptionText__c</fullName>
    <label>Answer Option Text</label>
    <type>TextArea</type>
</CustomField>