force-app/main/default/objects/AnswerOption__c/fields/MatchingText__c.field-meta.xml
<CustomField>
    <fullName>MatchingText__c</fullName>
    <label>Matching Text</label>
    <type>TextArea</type>
</CustomField>