force-app/main/default/objects/AnswerOption__c/validationRules/AnswerTextRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>AnswerTextRequired</fullName>
    <active>true</active>
    <description>The answer option text is required.</description>
    <errorConditionFormula>AND( TEXT(Question__r.Type__c) &lt;&gt; &#39;Matching Options&#39;, ISBLANK( AnswerOptionText__c ))</errorConditionFormula>
    <errorDisplayField>AnswerOptionText__c</errorDisplayField>
    <errorMessage>The answer option text is required.</errorMessage>
</ValidationRule>