force-app/main/default/objects/AnswerOption__c/validationRules/CannotChangeQuestion.validationRule-meta.xml
<ValidationRule>
    <fullName>CannotChangeQuestion</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED( Question__c )</errorConditionFormula>
    <errorDisplayField>Question__c</errorDisplayField>
    <errorMessage>Cannot change the related question.</errorMessage>
</ValidationRule>